--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #fddc5c;
+  background-color: #bcc6d2;
 }
 
 .fed-login {
@@ -26,4 +26,17 @@ body {
   margin-top: 100px;
   display: flex;
   justify-content: space-evenly;
+}
+
+.country {
+  display: inline;
+  max-width: 20px;
+  max-height: 20px;
+}
+
+.country img {
+  width: 35px;
+  height: 35px;
+  margin-left: 20px;
+  margin-top: 5px;
 }
